--- a/index-START.html
+++ b/index-START.html
@@ -69,7 +69,7 @@
       key.classList.add('playing');
   }
   function removeTransition(e) {
-    if (e.propertyName !== 'transform') return; // skip it if it's not a transform
+    if (e.propertyName !== 'transform') return; 
     this.classList.remove('playing');
   }
 
